    used type chandev.
  * apt-install: support CD/DVD changing by using debconf-apt-progress.
    To make media changing possible, the installation CD is unmounted in the
    D-I environment and reloaded after the package installation is finished.
    This change also makes apt-install use the passthrough instead of the
    noninteractive frontend.
    Requires debconf (1.5.16) in testing.

  [ Otavio Salvador ]
  * list-devices: use pendrive as floppy workaround while probing
    partitions. Closes: #440301.

 -- Otavio Salvador <otavio@ossystems.com.br>  Tue, 06 Nov 2007 19:07:30 -0200

debian-installer-utils (1.49) unstable; urgency=low

  [ Frans Pop ]
  * user-params: also filter out new D-I boot parameter "lowmem".

  [ Joey Hess ]
  * Pass APT::Install-Recommends=false to apt to avoid new versions pulling in
    recommends.

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:14:53 +0200

debian-installer-utils (1.48) unstable; urgency=low

  [ Colin Watson ]
  * list-devices: Fix incomplete addition of maybe-usb-floppy parameter.

 -- Frans Pop <fjp@debian.org>  Wed, 25 Apr 2007 16:48:30 +0200

debian-installer-utils (1.47) unstable; urgency=low

  * Code cleanup:
    - update-dev: remove support for old versions of hotplug/udev
    - list-devices: remove support for listing devices based on devfs-style
      names
  * list-devices: deprecate the maybe-floppy parameter as it was only used
    when listing devices based on devfs-style names.
  * list-devices: add maybe-usb-floppy parameter to allow to also scan for
    USB-devices (sticks, CD drives) that are misdetected as floppy.

 -- Frans Pop <fjp@debian.org>  Sat, 21 Apr 2007 00:56:58 +0200

debian-installer-utils (1.46) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Work around some weirdness in di_exec that caused log-output sometimes
      to hang in poll(). We now install a no-op SIGCHLD handler to make sure
      that poll() returns EINTR when the subsidiary process exits.