@@ -9,12 +9,13 @@ debian-installer-utils (1.50) UNRELEASED; urgency=low
     This change also makes apt-install use the passthrough instead of the
     noninteractive frontend.
     Requires debconf (1.5.16) in testing.
+  * chroot-setup.sh: unconditionally check for and mount /target/sys.
 
   [ Otavio Salvador ]
   * list-devices: use pendrive as floppy workaround while probing
     partitions. Closes: #440301.
 
- -- Otavio Salvador <otavio@ossystems.com.br>  Tue, 06 Nov 2007 19:07:30 -0200
+ -- Frans Pop <fjp@debian.org>  Sun, 11 Nov 2007 07:29:54 +0100
 
 debian-installer-utils (1.49) unstable; urgency=low
 
